<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">User Interface Controls　</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_textbox">EditText</string>
    <string name="title_activity_password_field">EditText(Password)</string>
    <string name="lblPassword">Enter Your Password :</string>
    <string name="btn_submit">Submit</string>
    <string name="title_activity_button">Button</string>
    <string name="chk_ios">IPhone</string>
    <string name="chk_android">Android</string>
    <string name="chk_windows">Windows Mobile</string>
    <string name="btn_display">Display</string>
    <string name="title_activity_check_box">CheckBox</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="title_activity_radio_button">RadioButton</string>
    <string name="toggle_turn_on">开</string>
    <string name="toggle_turn_off">关</string>
    <string name="title_activity_toggle_button">ToggleButton</string>
    <string name="title_activity_rating_bar">RatingBar</string>
    <string name="country_prompt">Choose a country</string>
    <string name="email_hint">Input Email</string>
    <string name="number">Input number</string>
    <string name="search_hint">Search Keyword</string>

    <string-array name="country_arrays">
        <item>Malaysia</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
        <item>@string/title_activity_button</item>
    </string-array>

    <string name="title_activity_spinner">Spinner(DropDownList)</string>
    <string name="title_activity_date_picker">DatePicker</string>
    <string name="title_activity_time_picker">TimePicker</string>
    <string name="title_activity_analog_clock">AnalogClock</string>
    <string name="title_activity_progress_bar">ProgressBar</string>
    <string name="title_activity_alert_dialog">AlertDialog</string>

</resources>